Fix poor form input visibility inside .content-box

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/new-manager/applications.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/new-manager/applications.scss
@@ -1,6 +1,5 @@
 .input, .dropdown {
   border-radius: 8px;
-  border-color: transparent;
 }
 
 h1 {
